refactor: format and optimize all documents and code
- Fix all JVM parameter format errors: 一XX: → -XX:
- Uniform Chinese punctuation usage across all Markdown files
- Remove redundant leading tabs and fix inconsistent indentation
- Clean up consecutive empty lines
- Correct typos found during review
- Ensure all files end with newline character
- Uniform title format and list indentation
- Verify all original content preserved, only format changes